--- a/models/bert_boosted/neural_network_small.ipynb
+++ b/models/bert_boosted/neural_network_small.ipynb
@@ -14,22 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Riccardo De Cesaris\\AppData\\Local\\Temp\\ipykernel_23752\\677721745.py:1: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n",
-      "e:\\anaconda3\\envs\\DL_GPU_Full\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/Users/alessandropesare/anaconda3/envs/DL_GPU_Full/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -51,7 +43,7 @@
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.models import Model\n",
     "from tensorflow.keras.layers import Input, Conv1D, MaxPooling1D, Flatten, Dense,Reshape\n",
-    "from tensorflow.keras.optimizers.legacy import Adam as Adam_legacy\n",
+    "from keras.optimizers import Adam\n",
     "from datetime import datetime\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix, ConfusionMatrixDisplay"
@@ -66,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -74,6 +66,17 @@
      "output_type": "stream",
      "text": [
       "GPU disponibile, TensorFlow sta utilizzando la GPU.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-02-11 17:49:05.615397: I metal_plugin/src/device/metal_device.cc:1154] Metal device set to: Apple M1\n",
+      "2024-02-11 17:49:05.615436: I metal_plugin/src/device/metal_device.cc:296] systemMemory: 8.00 GB\n",
+      "2024-02-11 17:49:05.615445: I metal_plugin/src/device/metal_device.cc:313] maxCacheSize: 2.67 GB\n",
+      "2024-02-11 17:49:05.615519: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:306] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "2024-02-11 17:49:05.615593: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:272] Created TensorFlow device (/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
      ]
     }
    ],
@@ -180,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -229,10 +232,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Adam' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 21\u001b[0m\n\u001b[1;32m     18\u001b[0m model \u001b[38;5;241m=\u001b[39m Model(inputs\u001b[38;5;241m=\u001b[39m[review], outputs\u001b[38;5;241m=\u001b[39m[main_output])\n\u001b[1;32m     20\u001b[0m \u001b[38;5;66;03m# Compilazione del modello\u001b[39;00m\n\u001b[0;32m---> 21\u001b[0m optimizer \u001b[38;5;241m=\u001b[39m \u001b[43mAdam\u001b[49m(lr\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1e-2\u001b[39m)\n\u001b[1;32m     22\u001b[0m model\u001b[38;5;241m.\u001b[39mcompile(optimizer\u001b[38;5;241m=\u001b[39moptimizer, loss\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbinary_crossentropy\u001b[39m\u001b[38;5;124m'\u001b[39m, metrics\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124maccuracy\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28mprint\u001b[39m(model\u001b[38;5;241m.\u001b[39msummary())\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Adam' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#CNN model Functional API\n",
+    "review = Input(shape=(X_train.shape[1],), dtype='float', name='review')\n",
+    "# Aggiunta di una dimensione per rappresentare il canale (l'input è bidimensionale e ci aspetta invece la dimensione associata al canale)\n",
+    "review_reshaped = Reshape((X_train.shape[1], 1))(review)\n",
+    "    \n",
+    "# Layer convoluzionali\n",
+    "conv_1 = Conv1D(filters=32, kernel_size=5, activation='relu')(review_reshaped)\n",
+    "max_pool_1 = MaxPooling1D(pool_size=2)(conv_1)\n",
+    "conv_2 = Conv1D(filters=32, kernel_size=3, activation='relu')(max_pool_1)\n",
+    "max_pool_2 = MaxPooling1D(pool_size=2)(conv_2)\n",
+    "conv_3 = Conv1D(filters=64, kernel_size=5, activation='relu')(max_pool_2)\n",
+    "\n",
+    "# Appiattimento e strato fully-connected\n",
+    "flatten = Flatten()(conv_3)\n",
+    "main_output = Dense(1, activation='sigmoid', name='main_output')(flatten)\n",
+    "\n",
+    "# Costruzione del modello\n",
+    "model = Model(inputs=[review], outputs=[main_output])\n",
+    "    \n",
+    "# Compilazione del modello\n",
+    "optimizer = Adam(lr=1e-2)\n",
+    "model.compile(optimizer=optimizer, loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "print(model.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#CNN model Sequential API\n",
     "model = tf.keras.models.Sequential(\n",
     "    [\n",
     "        tf.keras.layers.Input(shape=(X_train.shape[1],), dtype='float'),\n",
@@ -294,35 +341,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training della Rete Neurale sul Dataset 'non-Lemmatizzato'...\n",
-      "Epoch 1/10\n",
-      "478/478 [==============================] - 3s 4ms/step - loss: 0.2463 - accuracy: 0.8974\n",
-      "Epoch 2/10\n",
-      "478/478 [==============================] - 2s 5ms/step - loss: 0.1920 - accuracy: 0.9219\n",
-      "Epoch 3/10\n",
-      "478/478 [==============================] - 2s 5ms/step - loss: 0.1814 - accuracy: 0.9263\n",
-      "Epoch 4/10\n",
-      "478/478 [==============================] - 2s 5ms/step - loss: 0.1700 - accuracy: 0.9308\n",
-      "Epoch 5/10\n",
-      "478/478 [==============================] - 2s 5ms/step - loss: 0.1611 - accuracy: 0.9354\n",
-      "Epoch 6/10\n",
-      "478/478 [==============================] - 2s 5ms/step - loss: 0.1498 - accuracy: 0.9405\n",
-      "Epoch 7/10\n",
-      "478/478 [==============================] - 2s 5ms/step - loss: 0.1408 - accuracy: 0.9433\n",
-      "Epoch 8/10\n",
-      "478/478 [==============================] - 2s 5ms/step - loss: 0.1314 - accuracy: 0.9478\n",
-      "Epoch 9/10\n",
-      "478/478 [==============================] - 2s 5ms/step - loss: 0.1176 - accuracy: 0.9526\n",
-      "Epoch 10/10\n",
-      "478/478 [==============================] - 2s 5ms/step - loss: 0.1062 - accuracy: 0.9583\n",
-      "Training completato! Tempo impiegato: 0:00:24.248309\n"
+      "Training della Rete Neurale sul Dataset 'non-Lemmatizzato'...\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "You must compile your model before training/testing. Use `model.compile(optimizer, loss)`.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTraining della Rete Neurale sul Dataset \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnon-Lemmatizzato\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      5\u001b[0m start \u001b[38;5;241m=\u001b[39m datetime\u001b[38;5;241m.\u001b[39mnow()\n\u001b[0;32m----> 6\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43mepochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m32\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m end \u001b[38;5;241m=\u001b[39m datetime\u001b[38;5;241m.\u001b[39mnow()\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTraining completato! Tempo impiegato: \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(end\u001b[38;5;241m-\u001b[39mstart))\n",
+      "File \u001b[0;32m~/anaconda3/envs/DL_GPU_Full/lib/python3.11/site-packages/keras/src/utils/traceback_utils.py:70\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     67\u001b[0m     filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[1;32m     68\u001b[0m     \u001b[38;5;66;03m# To get the full stack trace, call:\u001b[39;00m\n\u001b[1;32m     69\u001b[0m     \u001b[38;5;66;03m# `tf.debugging.disable_traceback_filtering()`\u001b[39;00m\n\u001b[0;32m---> 70\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m     71\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m     72\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
+      "File \u001b[0;32m~/anaconda3/envs/DL_GPU_Full/lib/python3.11/site-packages/keras/src/engine/training.py:3983\u001b[0m, in \u001b[0;36mModel._assert_compile_was_called\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   3977\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_assert_compile_was_called\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m   3978\u001b[0m     \u001b[38;5;66;03m# Checks whether `compile` has been called. If it has been called,\u001b[39;00m\n\u001b[1;32m   3979\u001b[0m     \u001b[38;5;66;03m# then the optimizer is set. This is different from whether the\u001b[39;00m\n\u001b[1;32m   3980\u001b[0m     \u001b[38;5;66;03m# model is compiled\u001b[39;00m\n\u001b[1;32m   3981\u001b[0m     \u001b[38;5;66;03m# (i.e. whether the model is built and its inputs/outputs are set).\u001b[39;00m\n\u001b[1;32m   3982\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_is_compiled:\n\u001b[0;32m-> 3983\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[1;32m   3984\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mYou must compile your model before \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   3985\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtraining/testing. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   3986\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUse `model.compile(optimizer, loss)`.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   3987\u001b[0m         )\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: You must compile your model before training/testing. Use `model.compile(optimizer, loss)`."
      ]
     }
    ],
@@ -546,7 +585,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
