Calcolo della "ROC Accuracy" per ogni Modello

--- a/models/bert_boosted/neural_network_big.ipynb
+++ b/models/bert_boosted/neural_network_big.ipynb
@@ -21,7 +21,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Riccardo De Cesaris\\AppData\\Local\\Temp\\ipykernel_14808\\677721745.py:1: DeprecationWarning: \n",
+      "C:\\Users\\Riccardo De Cesaris\\AppData\\Local\\Temp\\ipykernel_47256\\1753812017.py:1: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -54,7 +54,7 @@
     "from tensorflow.keras.optimizers.legacy import Adam as Adam_legacy\n",
     "from datetime import datetime\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix, ConfusionMatrixDisplay"
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix, ConfusionMatrixDisplay, roc_auc_score"
    ]
   },
   {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -273,38 +273,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training della Rete Neurale sul Dataset 'non-Lemmatizzato'...\n",
-      "Epoch 1/10\n",
-      "478/478 [==============================] - 8s 8ms/step - loss: 0.3494 - accuracy: 0.8633\n",
-      "Epoch 2/10\n",
-      "478/478 [==============================] - 4s 7ms/step - loss: 0.2488 - accuracy: 0.9083\n",
-      "Epoch 3/10\n",
-      "478/478 [==============================] - 4s 7ms/step - loss: 0.2348 - accuracy: 0.9124\n",
-      "Epoch 4/10\n",
-      "478/478 [==============================] - 3s 7ms/step - loss: 0.2263 - accuracy: 0.9165\n",
-      "Epoch 5/10\n",
-      "478/478 [==============================] - 4s 8ms/step - loss: 0.2156 - accuracy: 0.9166\n",
-      "Epoch 6/10\n",
-      "478/478 [==============================] - 4s 8ms/step - loss: 0.2129 - accuracy: 0.9151\n",
-      "Epoch 7/10\n",
-      "478/478 [==============================] - 4s 7ms/step - loss: 0.2077 - accuracy: 0.9193\n",
-      "Epoch 8/10\n",
-      "478/478 [==============================] - 4s 8ms/step - loss: 0.2028 - accuracy: 0.9190\n",
-      "Epoch 9/10\n",
-      "478/478 [==============================] - 3s 7ms/step - loss: 0.1995 - accuracy: 0.9233\n",
-      "Epoch 10/10\n",
-      "478/478 [==============================] - 3s 7ms/step - loss: 0.1903 - accuracy: 0.9212\n",
-      "Training completato! Tempo impiegato: 0:00:39.606269\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_train = X_train.to_numpy()\n",
     "\n",
@@ -320,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -382,14 +353,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "79/79 [==============================] - 1s 7ms/step\n",
+      "79/79 [==============================] - 1s 3ms/step\n",
       "79/79 [==============================] - 0s 2ms/step\n",
       "79/79 [==============================] - 0s 2ms/step\n",
       "79/79 [==============================] - 0s 2ms/step\n",
@@ -397,13 +368,13 @@
       "79/79 [==============================] - 0s 2ms/step\n",
       "79/79 [==============================] - 0s 2ms/step\n",
       "79/79 [==============================] - 0s 2ms/step\n",
-      "79/79 [==============================] - 0s 3ms/step\n",
       "79/79 [==============================] - 0s 2ms/step\n",
       "79/79 [==============================] - 0s 2ms/step\n",
       "79/79 [==============================] - 0s 2ms/step\n",
       "79/79 [==============================] - 0s 2ms/step\n",
       "79/79 [==============================] - 0s 2ms/step\n",
-      "79/79 [==============================] - 0s 3ms/step\n",
+      "79/79 [==============================] - 0s 2ms/step\n",
+      "79/79 [==============================] - 0s 2ms/step\n",
       "79/79 [==============================] - 0s 2ms/step\n",
       "79/79 [==============================] - 0s 2ms/step\n",
       "79/79 [==============================] - 0s 2ms/step\n",
@@ -435,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -489,6 +460,23 @@
     "disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=[0,1])\n",
     "disp.plot()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROC-AUC Score: 0.9262464387297241\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"ROC-AUC Score:\", roc_auc_score(y_test, y_pred))"
    ]
   }
  ],
