--- a/models/base/neural_network_big.ipynb
+++ b/models/base/neural_network_big.ipynb
@@ -22,7 +22,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Riccardo De Cesaris\\AppData\\Local\\Temp\\ipykernel_24304\\2017852653.py:1: DeprecationWarning: \n",
+      "C:\\Users\\Riccardo De Cesaris\\AppData\\Local\\Temp\\ipykernel_24992\\2314646026.py:1: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -51,7 +51,7 @@
     "from tensorflow.keras.optimizers.legacy import Adam as Adam_legacy\n",
     "from datetime import datetime\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix, ConfusionMatrixDisplay"
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix, ConfusionMatrixDisplay, roc_auc_score"
    ]
   },
   {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -235,38 +235,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training della Rete Neurale sul Dataset 'non-Lemmatizzato'...\n",
-      "Epoch 1/10\n",
-      "478/478 [==============================] - 20s 27ms/step - loss: 0.3830 - accuracy: 0.8484\n",
-      "Epoch 2/10\n",
-      "478/478 [==============================] - 13s 27ms/step - loss: 0.2218 - accuracy: 0.9180\n",
-      "Epoch 3/10\n",
-      "478/478 [==============================] - 13s 27ms/step - loss: 0.1451 - accuracy: 0.9434\n",
-      "Epoch 4/10\n",
-      "478/478 [==============================] - 13s 27ms/step - loss: 0.1041 - accuracy: 0.9596\n",
-      "Epoch 5/10\n",
-      "478/478 [==============================] - 13s 27ms/step - loss: 0.0694 - accuracy: 0.9700\n",
-      "Epoch 6/10\n",
-      "478/478 [==============================] - 13s 27ms/step - loss: 0.0560 - accuracy: 0.9755\n",
-      "Epoch 7/10\n",
-      "478/478 [==============================] - 13s 27ms/step - loss: 0.0399 - accuracy: 0.9822\n",
-      "Epoch 8/10\n",
-      "478/478 [==============================] - 13s 27ms/step - loss: 0.0461 - accuracy: 0.9854\n",
-      "Epoch 9/10\n",
-      "478/478 [==============================] - 13s 27ms/step - loss: 0.0308 - accuracy: 0.9912\n",
-      "Epoch 10/10\n",
-      "478/478 [==============================] - 13s 27ms/step - loss: 0.0263 - accuracy: 0.9920\n",
-      "Training completato! Tempo impiegato: 0:02:16.612360\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_train = X_train.toarray()\n",
     "\n",
@@ -282,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -352,39 +323,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "79/79 [==============================] - 1s 14ms/step\n",
+      "79/79 [==============================] - 3s 10ms/step\n",
+      "79/79 [==============================] - 1s 9ms/step\n",
+      "79/79 [==============================] - 1s 9ms/step\n",
+      "79/79 [==============================] - 1s 9ms/step\n",
+      "79/79 [==============================] - 1s 11ms/step\n",
       "79/79 [==============================] - 1s 9ms/step\n",
       "79/79 [==============================] - 1s 9ms/step\n",
       "79/79 [==============================] - 1s 10ms/step\n",
-      "79/79 [==============================] - 1s 9ms/step\n",
-      "79/79 [==============================] - 1s 9ms/step\n",
-      "79/79 [==============================] - 1s 9ms/step\n",
-      "79/79 [==============================] - 1s 9ms/step\n",
-      "79/79 [==============================] - 1s 9ms/step\n",
-      "79/79 [==============================] - 1s 9ms/step\n",
-      "79/79 [==============================] - 1s 9ms/step\n",
+      "79/79 [==============================] - 1s 10ms/step\n",
+      "79/79 [==============================] - 1s 10ms/step\n",
       "79/79 [==============================] - 1s 10ms/step\n",
       "79/79 [==============================] - 1s 9ms/step\n",
+      "79/79 [==============================] - 1s 10ms/step\n",
+      "79/79 [==============================] - 1s 10ms/step\n",
+      "79/79 [==============================] - 1s 10ms/step\n",
+      "79/79 [==============================] - 1s 10ms/step\n",
+      "79/79 [==============================] - 1s 10ms/step\n",
+      "79/79 [==============================] - 1s 10ms/step\n",
       "79/79 [==============================] - 1s 9ms/step\n",
+      "79/79 [==============================] - 1s 10ms/step\n",
+      "79/79 [==============================] - 1s 10ms/step\n",
       "79/79 [==============================] - 1s 9ms/step\n",
-      "79/79 [==============================] - 1s 9ms/step\n",
-      "79/79 [==============================] - 1s 9ms/step\n",
-      "79/79 [==============================] - 1s 9ms/step\n",
-      "79/79 [==============================] - 1s 9ms/step\n",
-      "79/79 [==============================] - 1s 9ms/step\n",
-      "79/79 [==============================] - 1s 9ms/step\n",
-      "79/79 [==============================] - 1s 9ms/step\n",
-      "79/79 [==============================] - 1s 9ms/step\n",
-      "79/79 [==============================] - 1s 9ms/step\n",
-      "79/79 [==============================] - 1s 9ms/step\n",
-      "42/42 [==============================] - 0s 10ms/step\n"
+      "79/79 [==============================] - 1s 10ms/step\n",
+      "79/79 [==============================] - 1s 10ms/step\n",
+      "79/79 [==============================] - 1s 10ms/step\n",
+      "42/42 [==============================] - 0s 11ms/step\n"
      ]
     }
    ],
@@ -405,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -462,6 +433,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROC-AUC Score: 0.9339871661787127\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"ROC-AUC Score:\", roc_auc_score(y_test, y_pred))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -470,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -599,38 +587,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training della Rete Neurale sul Dataset 'non-Lemmatizzato'...\n",
-      "Epoch 1/10\n",
-      "478/478 [==============================] - 12s 23ms/step - loss: 0.3902 - accuracy: 0.8473\n",
-      "Epoch 2/10\n",
-      "478/478 [==============================] - 11s 23ms/step - loss: 0.2338 - accuracy: 0.9119\n",
-      "Epoch 3/10\n",
-      "478/478 [==============================] - 11s 23ms/step - loss: 0.1611 - accuracy: 0.9437\n",
-      "Epoch 4/10\n",
-      "478/478 [==============================] - 11s 23ms/step - loss: 0.1221 - accuracy: 0.9570\n",
-      "Epoch 5/10\n",
-      "478/478 [==============================] - 11s 23ms/step - loss: 0.0891 - accuracy: 0.9686\n",
-      "Epoch 6/10\n",
-      "478/478 [==============================] - 11s 22ms/step - loss: 0.0667 - accuracy: 0.9764\n",
-      "Epoch 7/10\n",
-      "478/478 [==============================] - 11s 22ms/step - loss: 0.0503 - accuracy: 0.9823\n",
-      "Epoch 8/10\n",
-      "478/478 [==============================] - 11s 22ms/step - loss: 0.0422 - accuracy: 0.9830\n",
-      "Epoch 9/10\n",
-      "478/478 [==============================] - 11s 22ms/step - loss: 0.0373 - accuracy: 0.9855\n",
-      "Epoch 10/10\n",
-      "478/478 [==============================] - 11s 22ms/step - loss: 0.0339 - accuracy: 0.9854\n",
-      "Training completato! Tempo impiegato: 0:01:50.496324\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_train_lem = X_train_lem.toarray()\n",
     "\n",
@@ -646,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -693,16 +652,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "79/79 [==============================] - 1s 12ms/step\n",
-      "79/79 [==============================] - 1s 8ms/step\n",
-      "79/79 [==============================] - 1s 8ms/step\n",
+      "79/79 [==============================] - 1s 9ms/step\n",
       "79/79 [==============================] - 1s 9ms/step\n",
       "79/79 [==============================] - 1s 8ms/step\n",
       "79/79 [==============================] - 1s 8ms/step\n",
@@ -711,17 +668,19 @@
       "79/79 [==============================] - 1s 8ms/step\n",
       "79/79 [==============================] - 1s 8ms/step\n",
       "79/79 [==============================] - 1s 8ms/step\n",
-      "79/79 [==============================] - 1s 11ms/step\n",
       "79/79 [==============================] - 1s 8ms/step\n",
       "79/79 [==============================] - 1s 8ms/step\n",
       "79/79 [==============================] - 1s 9ms/step\n",
+      "79/79 [==============================] - 1s 9ms/step\n",
+      "79/79 [==============================] - 1s 9ms/step\n",
+      "79/79 [==============================] - 1s 10ms/step\n",
+      "79/79 [==============================] - 1s 9ms/step\n",
+      "79/79 [==============================] - 1s 9ms/step\n",
+      "79/79 [==============================] - 1s 9ms/step\n",
       "79/79 [==============================] - 1s 8ms/step\n",
       "79/79 [==============================] - 1s 8ms/step\n",
-      "79/79 [==============================] - 1s 8ms/step\n",
-      "79/79 [==============================] - 1s 8ms/step\n",
-      "79/79 [==============================] - 1s 8ms/step\n",
-      "79/79 [==============================] - 1s 11ms/step\n",
-      "79/79 [==============================] - 1s 8ms/step\n",
+      "79/79 [==============================] - 1s 9ms/step\n",
+      "79/79 [==============================] - 1s 9ms/step\n",
       "79/79 [==============================] - 1s 8ms/step\n",
       "79/79 [==============================] - 1s 8ms/step\n",
       "79/79 [==============================] - 1s 8ms/step\n",
@@ -746,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -800,6 +759,23 @@
     "disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=[0,1])\n",
     "disp.plot()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROC-AUC Score: 0.9337668661704793\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"ROC-AUC Score:\", roc_auc_score(y_test, y_pred_lem))"
    ]
   }
  ],
