--- a/models/base/rf_classifier_1000.ipynb
+++ b/models/base/rf_classifier_1000.ipynb
@@ -30,7 +30,7 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from datetime import datetime\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix, ConfusionMatrixDisplay"
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix, ConfusionMatrixDisplay, roc_auc_score"
    ]
   },
   {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,34 +118,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training di RF_1000 sul Dataset 'non-Lemmatizzato'...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done  49 tasks      | elapsed:   11.6s\n",
-      "[Parallel(n_jobs=1)]: Done 199 tasks      | elapsed:   47.4s\n",
-      "[Parallel(n_jobs=1)]: Done 449 tasks      | elapsed:  1.8min\n",
-      "[Parallel(n_jobs=1)]: Done 799 tasks      | elapsed:  3.2min\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training completato! Tempo impiegato: 0:03:58.902873\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Addestramento sul Dataset non-lemmatizzato\n",
     "print(\"Training di RF_1000 sul Dataset 'non-Lemmatizzato'...\")\n",
@@ -160,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -241,8 +216,8 @@
      "text": [
       "[Parallel(n_jobs=1)]: Done  49 tasks      | elapsed:    1.5s\n",
       "[Parallel(n_jobs=1)]: Done 199 tasks      | elapsed:    6.2s\n",
-      "[Parallel(n_jobs=1)]: Done 449 tasks      | elapsed:   14.2s\n",
-      "[Parallel(n_jobs=1)]: Done 799 tasks      | elapsed:   25.2s\n"
+      "[Parallel(n_jobs=1)]: Done 449 tasks      | elapsed:   14.3s\n",
+      "[Parallel(n_jobs=1)]: Done 799 tasks      | elapsed:   25.5s\n"
      ]
     },
     {
@@ -266,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -288,6 +263,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  49 tasks      | elapsed:    1.4s\n",
+      "[Parallel(n_jobs=1)]: Done 199 tasks      | elapsed:    6.2s\n",
+      "[Parallel(n_jobs=1)]: Done 449 tasks      | elapsed:   14.2s\n",
+      "[Parallel(n_jobs=1)]: Done 799 tasks      | elapsed:   25.2s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROC-AUC Score: 0.907260665577533\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_score = cl.predict_proba(X_test)[:, 1]\n",
+    "print(\"ROC-AUC Score:\", roc_auc_score(y_test, y_score))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -303,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,34 +346,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training di RF_1000 sul Dataset 'Lemmatizzato'...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done  49 tasks      | elapsed:   10.9s\n",
-      "[Parallel(n_jobs=1)]: Done 199 tasks      | elapsed:   44.6s\n",
-      "[Parallel(n_jobs=1)]: Done 449 tasks      | elapsed:  1.7min\n",
-      "[Parallel(n_jobs=1)]: Done 799 tasks      | elapsed:  3.0min\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training completato! Tempo impiegato: 0:03:43.324220\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Addestramento sul Dataset lemmatizzato\n",
     "print(\"Training di RF_1000 sul Dataset 'Lemmatizzato'...\")\n",
@@ -385,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -442,9 +420,9 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=1)]: Done  49 tasks      | elapsed:    1.4s\n",
-      "[Parallel(n_jobs=1)]: Done 199 tasks      | elapsed:    5.8s\n",
-      "[Parallel(n_jobs=1)]: Done 449 tasks      | elapsed:   13.1s\n",
-      "[Parallel(n_jobs=1)]: Done 799 tasks      | elapsed:   23.6s\n"
+      "[Parallel(n_jobs=1)]: Done 199 tasks      | elapsed:    5.7s\n",
+      "[Parallel(n_jobs=1)]: Done 449 tasks      | elapsed:   13.2s\n",
+      "[Parallel(n_jobs=1)]: Done 799 tasks      | elapsed:   23.5s\n"
      ]
     },
     {
@@ -468,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -487,6 +465,34 @@
     "disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=cl_lem.classes_)\n",
     "disp.plot()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  49 tasks      | elapsed:    1.4s\n",
+      "[Parallel(n_jobs=1)]: Done 199 tasks      | elapsed:    5.8s\n",
+      "[Parallel(n_jobs=1)]: Done 449 tasks      | elapsed:   13.1s\n",
+      "[Parallel(n_jobs=1)]: Done 799 tasks      | elapsed:   23.5s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROC-AUC Score: 0.9127451082041476\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_score_lem = cl_lem.predict_proba(X_test_lem)[:, 1]\n",
+    "print(\"ROC-AUC Score:\", roc_auc_score(y_test, y_score_lem))"
    ]
   }
  ],
