--- a/models/base/rf_classifier_500.ipynb
+++ b/models/base/rf_classifier_500.ipynb
@@ -30,7 +30,7 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from datetime import datetime\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix, ConfusionMatrixDisplay"
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix, ConfusionMatrixDisplay, roc_auc_score"
    ]
   },
   {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -108,43 +108,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cl = RandomForestClassifier(n_estimators=500, random_state=24, verbose=1)\n",
+    "cl = RandomForestClassifier(n_estimators=500, random_state=24)\n",
     "model_filename = \"rf_classifier_500.pkl\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training di RF_500 sul Dataset 'non-Lemmatizzato'...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done  49 tasks      | elapsed:   11.6s\n",
-      "[Parallel(n_jobs=1)]: Done 199 tasks      | elapsed:   47.3s\n",
-      "[Parallel(n_jobs=1)]: Done 449 tasks      | elapsed:  1.8min\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training completato! Tempo impiegato: 0:01:59.186223\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Addestramento sul Dataset non-lemmatizzato\n",
     "print(\"Training di RF_500 sul Dataset 'non-Lemmatizzato'...\")\n",
@@ -159,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +215,7 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=1)]: Done  49 tasks      | elapsed:    1.4s\n",
-      "[Parallel(n_jobs=1)]: Done 199 tasks      | elapsed:    6.1s\n",
+      "[Parallel(n_jobs=1)]: Done 199 tasks      | elapsed:    6.2s\n",
       "[Parallel(n_jobs=1)]: Done 449 tasks      | elapsed:   14.1s\n"
      ]
     },
@@ -264,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -286,6 +262,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  49 tasks      | elapsed:    1.4s\n",
+      "[Parallel(n_jobs=1)]: Done 199 tasks      | elapsed:    6.2s\n",
+      "[Parallel(n_jobs=1)]: Done 449 tasks      | elapsed:   14.1s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROC-AUC Score: 0.9062202883173069\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_score = cl.predict_proba(X_test)[:, 1]\n",
+    "print(\"ROC-AUC Score:\", roc_auc_score(y_test, y_score))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -301,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -331,43 +334,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cl_lem = RandomForestClassifier(n_estimators=500, random_state=24, verbose=1)\n",
+    "cl_lem = RandomForestClassifier(n_estimators=500, random_state=24)\n",
     "model_filename = \"rf_classifier_500_lem.pkl\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training di RF_500 sul Dataset 'Lemmatizzato'...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done  49 tasks      | elapsed:   10.6s\n",
-      "[Parallel(n_jobs=1)]: Done 199 tasks      | elapsed:   44.1s\n",
-      "[Parallel(n_jobs=1)]: Done 449 tasks      | elapsed:  1.6min\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training completato! Tempo impiegato: 0:01:50.308030\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Addestramento sul Dataset lemmatizzato\n",
     "print(\"Training di RF_500 sul Dataset 'Lemmatizzato'...\")\n",
@@ -382,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -431,16 +410,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done  49 tasks      | elapsed:    1.4s\n",
-      "[Parallel(n_jobs=1)]: Done 199 tasks      | elapsed:    5.8s\n",
-      "[Parallel(n_jobs=1)]: Done 449 tasks      | elapsed:   13.2s\n"
+      "[Parallel(n_jobs=1)]: Done  49 tasks      | elapsed:    1.3s\n",
+      "[Parallel(n_jobs=1)]: Done 199 tasks      | elapsed:    5.7s\n",
+      "[Parallel(n_jobs=1)]: Done 449 tasks      | elapsed:   13.0s\n"
      ]
     },
     {
@@ -464,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -483,6 +462,33 @@
     "disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=cl_lem.classes_)\n",
     "disp.plot()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  49 tasks      | elapsed:    1.3s\n",
+      "[Parallel(n_jobs=1)]: Done 199 tasks      | elapsed:    5.7s\n",
+      "[Parallel(n_jobs=1)]: Done 449 tasks      | elapsed:   13.0s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROC-AUC Score: 0.9120562594692773\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_score_lem = cl_lem.predict_proba(X_test_lem)[:, 1]\n",
+    "print(\"ROC-AUC Score:\", roc_auc_score(y_test, y_score_lem))"
    ]
   }
  ],
