--- a/models/bert_boosted/rf_classifier_1000.ipynb
+++ b/models/bert_boosted/rf_classifier_1000.ipynb
@@ -38,7 +38,7 @@
     "from nltk.tokenize import word_tokenize\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from datetime import datetime\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix, ConfusionMatrixDisplay"
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix, ConfusionMatrixDisplay, roc_auc_score"
    ]
   },
   {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,34 +161,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training di RF_1000 sul Dataset elaborato con BERT...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done  49 tasks      | elapsed:   21.4s\n",
-      "[Parallel(n_jobs=1)]: Done 199 tasks      | elapsed:  1.5min\n",
-      "[Parallel(n_jobs=1)]: Done 449 tasks      | elapsed:  3.3min\n",
-      "[Parallel(n_jobs=1)]: Done 799 tasks      | elapsed:  5.8min\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training completato! Tempo impiegato: 0:07:12.597020\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Addestramento sul Dataset non-lemmatizzato\n",
     "print(\"Training di RF_1000 sul Dataset elaborato con BERT...\")\n",
@@ -203,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -275,9 +250,9 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=1)]: Done  49 tasks      | elapsed:    0.5s\n",
-      "[Parallel(n_jobs=1)]: Done 199 tasks      | elapsed:    2.2s\n",
-      "[Parallel(n_jobs=1)]: Done 449 tasks      | elapsed:    5.0s\n",
-      "[Parallel(n_jobs=1)]: Done 799 tasks      | elapsed:    9.0s\n"
+      "[Parallel(n_jobs=1)]: Done 199 tasks      | elapsed:    2.3s\n",
+      "[Parallel(n_jobs=1)]: Done 449 tasks      | elapsed:    5.3s\n",
+      "[Parallel(n_jobs=1)]: Done 799 tasks      | elapsed:    9.5s\n"
      ]
     },
     {
@@ -301,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -320,6 +295,34 @@
     "disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=cl.classes_)\n",
     "disp.plot()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  49 tasks      | elapsed:    0.5s\n",
+      "[Parallel(n_jobs=1)]: Done 199 tasks      | elapsed:    2.5s\n",
+      "[Parallel(n_jobs=1)]: Done 449 tasks      | elapsed:    5.5s\n",
+      "[Parallel(n_jobs=1)]: Done 799 tasks      | elapsed:    9.7s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROC-AUC Score: 0.9186137968834065\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_score = cl.predict_proba(X_test)[:, 1]\n",
+    "print(\"ROC-AUC Score:\", roc_auc_score(y_test, y_score))"
    ]
   }
  ],
